fixed on mobile

--- a/components/Experience/Experience.scss
+++ b/components/Experience/Experience.scss
@@ -15,15 +15,16 @@
         padding-right: 2rem;
         transition:all 0.3s ease-in-out;
         width: 100%;
-        @media screen and (max-width:900px) {
-            margin:0.5rem;
-        }
         .header-work{
             display:flex;
             flex-direction: row;
             align-items: center;
             justify-content: space-between;
             padding: 1rem;
+            @media screen and (max-width:900px){
+                flex-direction: column;
+                align-items: flex-start;
+            }
         }
         ul{
             padding:0 1rem;
@@ -37,8 +38,12 @@
         }
         .exp-img{
             margin: 3rem;
+            display: flex;
             @media screen and (max-width:900px){
                 width: 80%;
+                margin: 2rem;
+                align-items: center;
+                justify-content: center;
             }
             img{
                 width: 120px;
@@ -59,6 +64,7 @@
             flex-direction: column;
             padding: 1rem;
             width: 96%;
+            margin:0.5rem;
         }
         &:hover{
             border:1px solid var(--secondary-color);
